# python_testrail_api

./: .env-example  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: python3.yml
docs/: INSTALLATION.md
scripts/: helper.py
src/main/: update_custom_region.py
src/main/support/: environment_loader.py  test_case_updater.py  testrail_api.py
